Remove emojis and update contact information

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>🍕 Portuga</h1>
+            <h1>Portuga</h1>
             <p class="subtitle">Restaurante & Pizzaria</p>
         </div>
     </header>
@@ -35,33 +35,34 @@
 
         <!-- Sobre -->
         <section class="menu-section">
-            <h2>📖 Nossa História</h2>
+            <h2>Nossa História</h2>
             <p style="color: #666; font-size: 1.1rem; line-height: 1.8;">
-                O Restaurante Portuga nasceu do amor pela culinária portuguesa e pelo desejo de compartilhar 
-                sabores autênticos com a comunidade brasileira. Nossa equipe de chefs experientes prepara 
-                cada prato com ingredientes frescos e receitas tradicionais, garantindo uma experiência 
-                gastronômica única.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et felis id lectus fringilla ornare. Ut ex justo, vulputate sed placerat quis, facilisis eget tortor. In egestas urna in ex pulvinar pretium. Sed at posuere lorem. Aenean a tincidunt urna, nec imperdiet quam. Curabitur tempor, massa at tincidunt sagittis, dui ex porttitor nunc, vel volutpat tellus lorem in magna. Nam sagittis, ipsum a tincidunt ullamcorper, tellus ex commodo magna, iaculis blandit nisl magna vitae quam.
+                Fusce luctus ipsum ac nisl vulputate cursus. Nullam lacinia dolor at odio tincidunt fermentum. Suspendisse lobortis vitae enim id eleifend. Maecenas mauris dolor, convallis non commodo nec, fermentum id nulla. In hac habitasse platea dictumst. Praesent vestibulum suscipit arcu, a scelerisque ligula. Ut dapibus tortor ac lorem ultricies, vitae mattis lectus cursus. Duis felis ligula, rutrum eget tempus at, sodales nec ligula. Phasellus dignissim nec ipsum non efficitur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque vitae mi mi. Phasellus mattis sem in velit venenatis, eu feugiat mauris tristique. Aenean pharetra, leo ut tempus euismod, libero nulla tincidunt est, vel porta arcu elit vitae purus. Praesent tempus mi quis arcu ullamcorper, ac porttitor arcu tristique. Morbi ut mi sed quam finibus venenatis. Cras sit amet elit sed eros semper elementum eget vitae enim.
+                Quisque luctus est ut nulla venenatis bibendum vel quis enim. Aenean sed lectus turpis. Integer sed viverra nunc. Vivamus maximus porttitor est non porta. Interdum et malesuada fames ac ante ipsum primis in faucibus. In sodales odio a nunc dignissim elementum nec sed arcu. Sed semper purus id arcu facilisis, sit amet faucibus sem sagittis.
+                Nullam a varius risus. Sed sit amet nisi neque. Integer a placerat est. Phasellus tincidunt felis dui, vel feugiat ex facilisis in. Morbi at eros lorem. Nulla facilisi. Phasellus sapien ipsum, feugiat eu gravida nec, semper vel nisi. Mauris ut sem aliquam, commodo magna non, vestibulum neque. Ut iaculis tortor tincidunt libero lacinia maximus. Maecenas nisi dui, sagittis a ultrices sed, venenatis eu leo. Aenean ut bibendum felis.
+                Donec ultricies consequat fringilla. Nulla nec turpis nec purus fringilla ultrices sed non lectus. Quisque eu lacus et purus pulvinar tincidunt. Suspendisse at condimentum ante, ac tincidunt leo. Pellentesque ornare, ex vitae fringilla dignissim, sapien diam vestibulum neque, molestie bibendum orci diam eu sapien. Vestibulum finibus sodales lacus, sit amet elementum dolor pretium eu. Proin tempus vehicula lorem ullamcorper dapibus. Nullam sodales ex pretium orci finibus iaculis.
             </p>
         </section>
 
         <!-- Destaques -->
         <section class="menu-section">
-            <h2>⭐ Nossos Destaques</h2>
+            <h2>Nossos Destaques</h2>
             <div class="menu-items">
                 <div class="menu-item">
-                    <h3>🐟 Bacalhau à Portuguesa</h3>
-                    <p>Tradicional prato português preparado com bacalhau autêntico</p>
+                    <h3>Bacalhau à Portuguesa</h3>
+                    <p>Tradicional prato preparado com bacalhau autêntico</p>
                 </div>
                 <div class="menu-item">
-                    <h3>🍕 Pizzas Artesanais</h3>
+                    <h3>Pizzas Artesanais</h3>
                     <p>Massa fresca preparada diariamente com ingredientes selecionados</p>
                 </div>
                 <div class="menu-item">
-                    <h3>🥩 Carnes Premium</h3>
+                    <h3>Carnes Premium</h3>
                     <p>Cortes nobres grelhados ao ponto perfeito</p>
                 </div>
                 <div class="menu-item">
-                    <h3>🦐 Frutos do Mar</h3>
+                    <h3>Frutos do Mar</h3>
                     <p>Frescos e selecionados, direto do mar para sua mesa</p>
                 </div>
             </div>
@@ -69,12 +70,12 @@
 
         <!-- Contato -->
         <section class="menu-section">
-            <h2>📞 Entre em Contato</h2>
+            <h2>Entre em Contato</h2>
             <p style="color: #666; font-size: 1.1rem; line-height: 1.8;">
-                <strong>Endereço:</strong> Rua Exemplo, 123 - Centro<br>
-                <strong>Telefone:</strong> (11) 1234-5678<br>
-                <strong>WhatsApp:</strong> (11) 91234-5678<br>
-                <strong>Horário:</strong> Terça a Domingo - 11h às 23h
+                <strong>Endereço:</strong>Av. Beira Mar, 13050 - Balneário Britânia, Ilha Comprida - SP, 11925-000<br>
+                <strong>Telefone:</strong> (13) 1234-5678<br>
+                <strong>WhatsApp:</strong> (13) 3842-1013<br>
+                <strong>Horário:</strong> Todos os dias - 11h às 24h
             </p>
         </section>
     </main>
