--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>🍕 Portuga</h1>
+            <h1>Portuga</h1>
             <p class="subtitle">Cardápio Completo</p>
         </div>
     </header>
@@ -26,7 +26,7 @@
     <main class="container">
         <!-- Pratos Individuais -->
         <section class="menu-section">
-            <h2>🍽️ Pratos Individuais</h2>
+            <h2>Pratos Individuais</h2>
             <div class="menu-items">
                 <div class="product-card">
                     <img src="images/bife-cavalo.jpg" alt="Bife-Cavalo" class="product-image" onerror="this.src='https://via.placeholder.com/400x200/e8c13f/333?text=Bife-Cavalo'">
@@ -72,7 +72,7 @@
 
         <!-- Pratos para Família -->
         <section class="menu-section">
-            <h2>👨‍👩‍👧‍👦 Pratos para Família</h2>
+            <h2>Pratos para Família</h2>
             <div class="menu-items">
                 <div class="product-card">
                     <img src="images/parmegiana-carne.jpg" alt="Parmegiana de Carne" class="product-image" onerror="this.src='https://via.placeholder.com/400x200/e8c13f/333?text=Parmegiana+Carne'">
@@ -128,7 +128,7 @@
 
         <!-- Porções -->
         <section class="menu-section">
-            <h2>🍤 Porções</h2>
+            <h2>Porções</h2>
             <div class="menu-items">
                 <div class="product-card">
                     <img src="images/camarao.jpg" alt="Camarão" class="product-image" onerror="this.src='https://via.placeholder.com/400x200/e8c13f/333?text=Camarao'">
@@ -164,7 +164,7 @@
 
         <!-- Pizzas -->
         <section class="menu-section">
-            <h2>🍕 Pizzas</h2>
+            <h2>Pizzas</h2>
             <div class="menu-items">
                 <div class="product-card">
                     <img src="images/pizza-4queijos.jpg" alt="Quatro Queijos" class="product-image" onerror="this.src='https://via.placeholder.com/400x200/e8c13f/333?text=4+Queijos'">
