--- a/carrinho.html
+++ b/carrinho.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>🛒 Carrinho</h1>
+            <h1>Carrinho</h1>
             <p class="subtitle">Revise seu pedido</p>
         </div>
     </header>
@@ -32,7 +32,7 @@
                 </div>
                 
                 <div id="empty-cart" class="empty-state" style="display: none;">
-                    <div class="empty-state-icon">🛒</div>
+                    <div class="empty-state-icon"></div>
                     <h3>Seu carrinho está vazio</h3>
                     <p>Adicione itens do nosso cardápio para começar seu pedido</p>
                     <a href="menu.html" class="btn" style="margin-top: 20px;">Ver Cardápio</a>
@@ -54,11 +54,11 @@
                 </div>
 
                 <button id="finalize-order-btn" class="btn" style="width: 100%; margin-top: 20px; font-size: 1.1rem;">
-                    📱 Finalizar via WhatsApp
+                    Finalizar via WhatsApp
                 </button>
 
                 <button id="clear-cart-btn" class="btn btn-danger" style="width: 100%; margin-top: 10px;">
-                    🗑️ Limpar Carrinho
+                    Limpar Carrinho
                 </button>
             </div>
         </div>
