--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
     <!-- Login Form -->
     <div id="login-section" class="login-container">
         <div class="login-box">
-            <h2>🔐 Painel Administrativo</h2>
+            <h2>Painel Administrativo</h2>
             <form id="login-form">
                 <div class="form-group">
                     <label for="username">Usuário:</label>
@@ -35,7 +35,7 @@
             <div class="container">
                 <div style="display: flex; justify-content: space-between; align-items: center;">
                     <div>
-                        <h1>📊 Painel Administrativo</h1>
+                        <h1>Painel Administrativo</h1>
                         <p class="subtitle">Gerenciamento de Pedidos</p>
                     </div>
                     <button class="btn btn-secondary" onclick="logout()">Sair</button>
@@ -72,7 +72,7 @@
 
             <!-- Revenue Stats -->
             <div class="menu-section">
-                <h2>💰 Estatísticas Financeiras</h2>
+                <h2>Estatísticas Financeiras</h2>
                 <div class="stats-grid">
                     <div class="stat-card">
                         <div class="stat-value" id="stat-revenue">R$ 0,00</div>
@@ -87,7 +87,7 @@
 
             <!-- Most Ordered Items -->
             <div class="menu-section">
-                <h2>🏆 Pratos Mais Pedidos</h2>
+                <h2>Pratos Mais Pedidos</h2>
                 <div id="popular-items" style="color: #666;">
                     Carregando estatísticas...
                 </div>
@@ -95,7 +95,7 @@
 
             <!-- Orders List -->
             <div class="order-list">
-                <h2 style="color: #e8c13f; margin-bottom: 25px;">📋 Lista de Pedidos</h2>
+                <h2 style="color: #e8c13f; margin-bottom: 25px;">Lista de Pedidos</h2>
                 
                 <div style="margin-bottom: 20px;">
                     <label style="margin-right: 15px; color: #666;">Filtrar por status:</label>
@@ -112,7 +112,7 @@
                 </div>
 
                 <div id="no-orders" class="empty-state" style="display: none;">
-                    <div class="empty-state-icon">📋</div>
+                    <div class="empty-state-icon"></div>
                     <h3>Nenhum pedido encontrado</h3>
                     <p>Os pedidos aparecerão aqui quando os clientes fizerem pedidos</p>
                 </div>
@@ -120,11 +120,11 @@
 
             <!-- Clear Data Section -->
             <div class="menu-section" style="margin-top: 30px;">
-                <h2 style="color: #dc3545;">⚠️ Zona de Perigo</h2>
+                <h2 style="color: #dc3545;">Zona de Perigo</h2>
                 <p style="color: #666; margin-bottom: 15px;">
                     Atenção: Esta ação irá remover todos os pedidos do sistema e não pode ser desfeita.
                 </p>
-                <button class="btn btn-danger" onclick="clearAllOrders()">🗑️ Limpar Todos os Pedidos</button>
+                <button class="btn btn-danger" onclick="clearAllOrders()">Limpar Todos os Pedidos</button>
             </div>
         </main>
 
