Update footer year and comment out admin link

--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="menu.html">Cardápio</a></li>
             <li><a href="carrinho.html">Carrinho <span id="cart-badge" class="cart-badge" style="display: none;">0</span></a></li>
-            <li><a href="admin.html">Admin</a></li>
+            <!--<li><a href="admin.html">Admin</a></li>-->
         </ul>
     </nav>
 
@@ -231,7 +231,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Portuga - Restaurante & Pizzaria</p>
+            <p>&copy; 2025 Portuga - Restaurante & Pizzaria</p>
             <p>Sabor português com tradição brasileira</p>
         </div>
     </footer>
