--- a/carrinho.html
+++ b/carrinho.html
@@ -73,8 +73,10 @@
             document.getElementById('finalize-order-btn').addEventListener('click', finalizeOrder);
 
             document.getElementById('clear-cart-btn').addEventListener('click', function() {
-                clearCart();
-                renderCart();
+                if (confirm('Tem certeza que deseja limpar o carrinho?')) {
+                    clearCart();
+                    renderCart();
+                }
             });
         });
     </script>
