--- a/index.html
+++ b/index.html
@@ -33,19 +33,13 @@
             <a href="menu.html" class="btn">Ver Cardápio</a>
         </section>
 
-        <!-- Sobre -->
         <section class="menu-section">
             <h2>Nossa História</h2>
             <p style="color: #666; font-size: 1.1rem; line-height: 1.8;">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et felis id lectus fringilla ornare. Ut ex justo, vulputate sed placerat quis, facilisis eget tortor. In egestas urna in ex pulvinar pretium. Sed at posuere lorem. Aenean a tincidunt urna, nec imperdiet quam. Curabitur tempor, massa at tincidunt sagittis, dui ex porttitor nunc, vel volutpat tellus lorem in magna. Nam sagittis, ipsum a tincidunt ullamcorper, tellus ex commodo magna, iaculis blandit nisl magna vitae quam.
-                Fusce luctus ipsum ac nisl vulputate cursus. Nullam lacinia dolor at odio tincidunt fermentum. Suspendisse lobortis vitae enim id eleifend. Maecenas mauris dolor, convallis non commodo nec, fermentum id nulla. In hac habitasse platea dictumst. Praesent vestibulum suscipit arcu, a scelerisque ligula. Ut dapibus tortor ac lorem ultricies, vitae mattis lectus cursus. Duis felis ligula, rutrum eget tempus at, sodales nec ligula. Phasellus dignissim nec ipsum non efficitur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque vitae mi mi. Phasellus mattis sem in velit venenatis, eu feugiat mauris tristique. Aenean pharetra, leo ut tempus euismod, libero nulla tincidunt est, vel porta arcu elit vitae purus. Praesent tempus mi quis arcu ullamcorper, ac porttitor arcu tristique. Morbi ut mi sed quam finibus venenatis. Cras sit amet elit sed eros semper elementum eget vitae enim.
-                Quisque luctus est ut nulla venenatis bibendum vel quis enim. Aenean sed lectus turpis. Integer sed viverra nunc. Vivamus maximus porttitor est non porta. Interdum et malesuada fames ac ante ipsum primis in faucibus. In sodales odio a nunc dignissim elementum nec sed arcu. Sed semper purus id arcu facilisis, sit amet faucibus sem sagittis.
-                Nullam a varius risus. Sed sit amet nisi neque. Integer a placerat est. Phasellus tincidunt felis dui, vel feugiat ex facilisis in. Morbi at eros lorem. Nulla facilisi. Phasellus sapien ipsum, feugiat eu gravida nec, semper vel nisi. Mauris ut sem aliquam, commodo magna non, vestibulum neque. Ut iaculis tortor tincidunt libero lacinia maximus. Maecenas nisi dui, sagittis a ultrices sed, venenatis eu leo. Aenean ut bibendum felis.
-                Donec ultricies consequat fringilla. Nulla nec turpis nec purus fringilla ultrices sed non lectus. Quisque eu lacus et purus pulvinar tincidunt. Suspendisse at condimentum ante, ac tincidunt leo. Pellentesque ornare, ex vitae fringilla dignissim, sapien diam vestibulum neque, molestie bibendum orci diam eu sapien. Vestibulum finibus sodales lacus, sit amet elementum dolor pretium eu. Proin tempus vehicula lorem ullamcorper dapibus. Nullam sodales ex pretium orci finibus iaculis.
             </p>
         </section>
 
-        <!-- Destaques -->
         <section class="menu-section">
             <h2>Nossos Destaques</h2>
             <div class="menu-items">
@@ -68,14 +62,13 @@
             </div>
         </section>
 
-        <!-- Contato -->
         <section class="menu-section">
             <h2>Entre em Contato</h2>
             <p style="color: #666; font-size: 1.1rem; line-height: 1.8;">
                 <strong>Endereço:</strong>Av. Beira Mar, 13050 - Balneário Britânia, Ilha Comprida - SP, 11925-000<br>
-                <strong>Telefone:</strong> (13) 1234-5678<br>
-                <strong>WhatsApp:</strong> (13) 3842-1013<br>
-                <strong>Horário:</strong> Todos os dias - 11h às 24h
+                <strong>Telefone:</strong> (13) 3842-1013<br>
+                <strong>WhatsApp:</strong> (13) 98137-5008<br>
+                <strong>Horários de funcionamento:</strong> <br /> Cozinha: Todos os dias - 11h às 22h <br /> Pizzaria: Todos os dias - 18h às 24h <br /> Entregas: Todos os dias - 11h às 24h
             </p>
         </section>
     </main>
