--- a/admin.html
+++ b/admin.html
@@ -812,10 +812,10 @@
         </div>
     </div>
 
-    <script src="scripts.js?v=20260105"></script>
-    <script src="auth.js?v=20260105"></script>
-    <script src="scripts/auth-check.js?v=20260105"></script>
-    <script src="admin-permissions.js?v=20260105"></script>
-    <script src="admin.js?v=20260105"></script>
+    <script src="scripts.js"></script>
+    <script src="auth.js"></script>
+    <script src="scripts/auth-check.js"></script>
+    <script src="admin-permissions.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
