--- a/admin.html
+++ b/admin.html
@@ -537,7 +537,7 @@
                 <p>&copy; <span id="current-year"></span> Portuga - Restaurante & Pizzaria</p>
                 <p>Painel Administrativo</p>
                 <div class="footer-propaganda">
-                    <p>Professional web development services available. Contact: <a href="mailto:wiikmy.jb@gmail.com">wiikmy.jb@gmail.com</a></p>
+                    <p>Serviços profissionais de desenvolvimento web disponíveis. Contato: <a href="mailto:wiikmy.jb@gmail.com">wiikmy.jb@gmail.com</a></p>
                 </div>
             </div>
         </footer>
