--- a/register.html
+++ b/register.html
@@ -123,7 +123,7 @@
             <p>&copy; <span id="current-year"></span> Portuga - Restaurante & Pizzaria</p>
             <p>Sabor português com tradição brasileira</p>
             <div class="footer-propaganda">
-                <p>Professional web development services available. Contact: <a href="mailto:wiikmy.jb@gmail.com">wiikmy.jb@gmail.com</a></p>
+                <p>Serviços profissionais de desenvolvimento web disponíveis. Contato: <a href="mailto:wiikmy.jb@gmail.com">wiikmy.jb@gmail.com</a></p>
             </div>
         </div>
     </footer>
