--- a/pedidos.html
+++ b/pedidos.html
@@ -90,7 +90,7 @@
             <p>&copy; <span id="current-year"></span> Portuga - Restaurante & Pizzaria</p>
             <p>Endereço do Restaurante | (13) 99759-7759</p>
             <div class="footer-propaganda">
-                <p>Professional web development services available. Contact: <a href="mailto:wiikmy.jb@gmail.com">wiikmy.jb@gmail.com</a></p>
+                <p>Serviços profissionais de desenvolvimento web disponíveis. Contato: <a href="mailto:wiikmy.jb@gmail.com">wiikmy.jb@gmail.com</a></p>
             </div>
         </div>
     </footer>
